# travian-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_api  run_gui
app/: main.py
app/api/: accounts.py  build.py  farmlists.py  hero.py  map_tiles.py  reports.py  schemas.py  strategy.py  troop_goals.py  villages.py
app/browser/: fingerprint.py  humanize.py  login.py  server.py  session.py  stealth.py  video_bonus.py
app/browser/pages/: __init__.py  build.py  dorf.py  hero.py  rally.py  reports.py  (+2 more)
app/core/: account_manager.py  config.py  crypto.py  logging.py  reconciler.py
app/data/: buildings.yaml  hero_items.yaml  troops.yaml
app/db/: session.py
app/models/: __init__.py  account.py  build.py  farmlist.py  hero.py  hero_policy.py  map_tile.py  raid.py  report.py  strategy_gate.py  troop_goal.py  village.py
app/services/: building.py  building_data.py  farming.py  hero.py  hero_item_data.py  map_scan.py  reports.py  strategy.py  tile_details.py  training.py  tribes.py  troop_data.py  troops.py  villages.py  world_sql.py
dashboard/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  main.tsx  theme.ts
docs/: commercial-rollout.md  licensed-distribution.md  path-decision.md
docs/improvements/: README.md  audit-log.md  ban-early-warning.md  feature-flags.md  fingerprint-humanization.md  observability.md  profile-state-storage.md  selector-regression-tests.md  shadow-mode.md
scripts/: init_config.py
tests/: conftest.py  test_strategy.py  test_strategy_api.py
(+29 files in other folders)
