[project]
name = "travian-bot"
version = "0.1.0"
description = "Multi-account Travian Legends automation with Playwright + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "playwright>=1.48",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "structlog>=24.4",
    "cryptography>=43.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "click>=8.1",
    "rich>=13.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
travian-init = "scripts.init_config:main"
travian-run = "app.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
